<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ipi.gm.portamonnaie.Main2Activity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center|top">

        <TextView
            android:text="Montant des portes monnaies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:textSize="30sp"
            android:textColor="#000000"
            android:gravity="center_vertical|center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:weightSum="1">

            <TextView
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/montant_eur"
                android:text="@string/montant_eur"
                android:textSize="30sp"
                android:layout_width="100dp" />

            <TextView
                android:layout_height="match_parent"
                android:id="@+id/devise_eur"
                android:textSize="30sp"
                android:gravity="center_vertical|left"
                android:layout_weight="0.01"
                android:layout_width="200dp"
                android:text="@string/currency_eur" />

            <ImageButton
                app:srcCompat="@android:drawable/stat_notify_sync"
                android:id="@+id/conversion_eur"
                android:layout_weight="1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:onClick="transfert_conversion_eur" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/montant_usd"
                android:text="@string/montant_usd"
                android:textSize="30sp"
                android:layout_width="100dp" />

            <TextView
                android:text="@string/currency_usd"
                android:layout_height="match_parent"
                android:id="@+id/devise_usd"
                android:textSize="30sp"
                android:gravity="center_vertical|left"
                android:layout_width="200dp" />

            <ImageButton
                app:srcCompat="@android:drawable/stat_notify_sync"
                android:id="@+id/conversion_usd"
                android:layout_weight="0.50"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:onClick="transfert_conversion_usd" />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/montant_gbp"
                android:text="@string/montant_gbp"
                android:textSize="30sp"
                android:layout_width="100dp" />

            <TextView
                android:text="@string/currency_gbp"
                android:layout_height="match_parent"
                android:id="@+id/devise_gbp"
                android:textSize="30sp"
                android:gravity="center_vertical|left"
                android:layout_width="200dp" />

            <ImageButton
                app:srcCompat="@android:drawable/stat_notify_sync"
                android:id="@+id/conversion_gbp"
                android:layout_height="60dp"
                android:layout_width="60dp"
                android:layout_weight="0.50"
                android:onClick="transfert_conversion_gbp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/montant_cny"
                android:text="@string/montant_cny"
                android:textSize="30sp"
                android:layout_width="100dp" />

            <TextView
                android:text="@string/currency_cny"
                android:layout_height="match_parent"
                android:id="@+id/devise_cny"
                android:textSize="30sp"
                android:gravity="center_vertical|left"
                android:layout_width="200dp" />

            <ImageButton
                app:srcCompat="@android:drawable/stat_notify_sync"
                android:id="@+id/conversion_cny"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="0.50"
                android:onClick="transfert_conversion_cny" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_gravity="fill_horizontal"
            android:columnCount="3"
            android:numColumns="3">

            <Button
                android:text="Gestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/gestion"
                android:onClick="GoToGestion" />
            <Button
                android:text="Transfert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/transferer_argent" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
